# langchain-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN_ANALYSIS.md  DESIGN_ANALYSIS_SUMMARY_EN.md  MIDDLEWARE_DESIGN.md  MIDDLEWARE_SUMMARY.md  README.md  README_ANALYSIS.md
.github/workflows/: rust.yml
crates/langchain/: Cargo.toml
crates/langchain/examples/: agent_memory.rs  agent_middleware.rs  agent_openai.rs  agent_openai_stream.rs  agent_postgres.rs  agent_redis.rs  agent_sqlite.rs  agent_struct.rs
crates/langchain/src/: lib.rs
crates/langchain_core/: Cargo.toml
crates/langchain_core/src/: error.rs  lib.rs  message.rs  request.rs  response.rs  (+1 more)
crates/langchain_openai/: Cargo.toml
crates/langgraph/: Cargo.toml
crates/langgraph-checkpoint-postgres/: README.md
crates/langgraph/src/: checkpoint.rs  edge.rs  event.rs  executor.rs  graph.rs  hitl_node.rs  intern.rs  interrupt.rs  label.rs  lib.rs  node.rs  state_graph.rs
crates/langgraph/src/checkpoint/: checkpoint_instantiation.rs  checkpoint_memory_saver.rs  checkpoint_postgres_saver.rs  checkpoint_redis_saver.rs  checkpoint_sqlite_saver.rs  checkpoint_trait.rs  mod.rs
data/: checkoutpoint.db
docs/: MIDDLEWARE_ARCHITECTURE_VISUAL.md
docs/middleware-examples/: README.md  integration_example.rs  logging_middleware.rs  retry_middleware.rs
langchain-openai/: Cargo.toml
langchain-openai/src/: main.rs  message.rs  request.rs
langchain/examples/: sample.rs
langchain/src/: lib.rs
langchain/tests/: react_agent_integration.rs
langchain_core/src/: message.rs
langchain_openai/src/: lib.rs
(+14 files in other folders)
